--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,5 +21,5 @@ jobs:
       with:
         java-version: '15'
         distribution: 'adopt'
-    - name: Build with Maven
+    - name: Test with Maven
       run: mvn -B test --file pom.xml
